--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Links</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Seymour+One&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+
+            font-family: "Seymour One", "Helvetica Neue", Helvetica, sans-serif;
+           font-size: 9px;
+}
+
+
+        
+
+        h1 {
+            text-align: center;
+            margin-top: 50px;
+            font-size: 30px;
+        }
+
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 10px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+
+        .box {
+            width: 100%;
+            padding-top: 100%;
+            /* 1:1 Aspect Ratio */
+            position: relative;
+            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5em;
+            cursor: pointer;
+        }
+
+        .box a {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: black;
+            text-decoration: none;
+        }
+    </style>
+
+</head>
+
+<body>
+
+    <h1>Nikos Links</h1>
+
+    <div class="container">
+        <div class="box"><a
+                href="https://docs.google.com/forms/d/e/1FAIpQLSdG9mKkUamS0K9L2cxbo-hCn3XsD1PYxLxXW9ENtVD6oAmO5Q/viewform"
+                target="_blank">Aktien Eingabe</a></div>
+        <div class="box"><a href="https://nik2890.github.io/StockCal" target="_blank">StockCal</a></div>
+        <div class="box"><a href="https://example.com/link3" target="_blank">Link 3</a></div>
+        <div class="box"><a href="https://example.com/link4" target="_blank">Link 4</a></div>
+        <div class="box"><a href="https://example.com/link5" target="_blank">Link 5</a></div>
+        <div class="box"><a href="https://example.com/link6" target="_blank">Link 6</a></div>
+        <div class="box"><a href="https://example.com/link7" target="_blank">Link 7</a></div>
+        <div class="box"><a href="https://example.com/link8" target="_blank">Link 8</a></div>
+        <div class="box"><a href="https://example.com/link9" target="_blank">Link 9</a></div>
+    </div>
+
+
+
+</body>
+
+</html>
