--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             cursor: pointer;
         }
 
+        .box:hover {
+            background-color: #23cc2c57;
+        }
+
         .box a {
             position: absolute;
             top: 0;
@@ -60,6 +64,7 @@
             justify-content: center;
             color: black;
             text-decoration: none;
+            font-size: 1em;
         }
     </style>
 
@@ -70,7 +75,8 @@
     <h1>Nikos Links</h1>
 
     <div class="container">
-        <div class="box"><a
+        <div class="box">
+            <a
                 href="https://docs.google.com/forms/d/e/1FAIpQLSdG9mKkUamS0K9L2cxbo-hCn3XsD1PYxLxXW9ENtVD6oAmO5Q/viewform"
                 target="_blank">Aktien Eingabe</a></div>
         <div class="box"><a href="https://nik2890.github.io/StockCal" target="_blank">StockCal</a></div>
