--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 href="https://docs.google.com/forms/d/e/1FAIpQLSdG9mKkUamS0K9L2cxbo-hCn3XsD1PYxLxXW9ENtVD6oAmO5Q/viewform"
                 target="_blank">Aktien Eingabe</a></div>
         <div class="box"><a href="https://nik2890.github.io/StockCal" target="_blank">StockCal</a></div>
-        <div class="box"><a href="https://example.com/link3" target="_blank">Link 3</a></div>
+        <div class="box"><a href="https://docs.google.com/spreadsheets/d/1Ub2UzEPFwJl39OaAwIrSsPticoWuOCs3FC5NQrxwfm4/edit?gid=0#gid=0" target="_blank">Aktien Übersicht</a></div>
         <div class="box"><a href="https://example.com/link4" target="_blank">Link 4</a></div>
         <div class="box"><a href="https://example.com/link5" target="_blank">Link 5</a></div>
         <div class="box"><a href="https://example.com/link6" target="_blank">Link 6</a></div>
