--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 <body>
     
-<img src="/android-chrome-256x256.png" alt="favicon" class="logo">
+<img src="android-chrome-256x256.png" alt="favicon" class="logo">
     <h1>Niko's Links</h1>
 
     <div class="container">
