--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         
         <div class="box"><a href="https://nik2890.github.io/SportKalender/" target="_blank">Sport Kalender</a></div>
         <div class="box"><a href="https://nik2890.github.io/FerienKalender/Index.html" target="_blank">Nikos Kalender</a></div>
-        <div class="box"><a href="https://example.com/link6" target="_blank">Link 6</a></div>
+        <div class="box"><a href="https://nik2890.github.io/Linuxtest/" target="_blank">Linuxtest</a></div>
         <div class="box"><a href="https://example.com/link7" target="_blank">Link 7</a></div>
         <div class="box"><a href="https://example.com/link8" target="_blank">Link 8</a></div>
         <div class="box"><a href="https://example.com/link9" target="_blank">Link 9</a></div>
