--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         
         <div class="box"><a href="https://nik2890.github.io/SupabaseKey/" target="_blank">Link 6</a></div>
         <div class="box"><a href="https://nik2890.github.io/FerienKalender/Login.html" target="_blank">Link 7</a></div>
-        <div class="box"><a href="https://example.com/link8" target="_blank">Link 8</a></div>
+        <div class="box"><a href=" https://nik2890.github.io/JustOneWord/" target="_blank">JustOneWord 8</a></div>
         <div class="box"><a href="https://example.com/link9" target="_blank">Link 9</a></div>
     </div>
 
